# ModelServer

./: .gitignore  LICENSE  README.md  README_EN.md  __init__.py  client_agent.py  client_llm.py  llm_server.py  pyproject.toml  requirements.txt  server_agent.py  server_llm.py  server_vlm.py  setup.py  start_GSAM2.py  start_agent.py  start_hexmove.py  start_llm.py  start_vlm.py  vlm_client.py  vlm_server.py
ModelServer/: __init__.py
ModelServer/client/: GSAM2.py  hexmove.py
ModelServer/models/GSAM2/: GSAM2.py
ModelServer/models/hexmove/: base_odom.py  hexmove.py  orbbec.py  piper.py  point_cloud_generator.py  utils.py
ModelServer/server/: GSAM2.py
ModelServer/tcp/: __init__.py  tcpclient.py  tcpserver.py
client/: __init__.py  agent.py  hexmove.py  llm.py  vlm.py
docs/: T265.md
models/: agent.py  llava.py  llm.py
models/agent/: agent.py  realsense.py
models/hexmove/: agent_scan.py  hexmove.py  odom_subscriber.py  orbbec.py  piper.py  utils.py
scripts/: MoBigen_data_collect.py  check_camera.py  foundation_pose_data_collect.py  iDP3_data_collect.py  replay_path.py  run_data_collection.py
scripts/quickstart_server/: go2.py  hexmove.py  utils.py
server/: agent.py  hexmove.py  llm.py  vlm.py
src/ModelServer/: __init__.py
src/ModelServer/config/: model_server_config.py
src/ModelServer/models/go2/: go2.py  gui_controller.py  param.py  robot_interface.py
src/ModelServer/models/hexmove/: activate_piper.sh  config.py  hexmove.py  orbbec.py  realsense.py
src/ModelServer/web/: client.py  server.py
tcp/: receive_data.py  tcpclient.py  tcpserver.py
(+4 files in other folders)
